# MatMul-RVM

./: .gitignore  CMakeLists.txt  README.md  build.sh  env.sh
.github/workflows/: pipeline.yml
cmake/: common_configuration.cmake
docs/: How2Debug.md  launch.json
lib/: CMakeLists.txt
lib/include/: gemm.h
lib/src/: gemm_blocked_ref.c  gemm_blocked_rvm.c  gemm_blocked_rvv.c  gemm_ref.c  utils.c
test/: CMakeLists.txt
test/include/: test_common.hpp
test/src/: test_ref_nonsquare.cpp  test_ref_square.cpp  test_rvm_nonsquare.cpp  test_rvm_square.cpp  test_rvv_nonsquare.cpp  test_rvv_square.cpp
